compiler/testData/diagnostics/tests/enum/kt8972_cloneNotAllowed.fir.kt
enum class E : Cloneable {
    A;
    <!OVERRIDING_FINAL_MEMBER!>override<!> fun clone(): Any {
        return <!AMBIGUOUS_SUPER!>super<!>.clone()
    }
}
